fix jvm args for java 11, add Arthas